--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Setup
 title:               Mark's homepage
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+tagline:             'A Journey'
 url:                 https://slliao.github.io
 baseurl:             ''
 paginate:            5
@@ -10,8 +9,8 @@ permalink:           pretty
 # About/contact
 author:
   name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  url:               https://slliao,github.io
+  email:             mark.slliao@gmail.com
 
 # Gems
 plugins:
